import java.util.*;

public class Bloc {
    private int taille;
    private ArrayList<Case> cases;

    public Bloc(int taille) {
        this.taille = taille;
    }

    public boolean validerBloc() {
        // TODO vérifie que les valeurs des cases sont bien différentes
        throw new RuntimeException("implémenter la fonction");
    }

}
