package Game;

public enum Difficulte {
    FACILE, MOYEN, DIFFICILE
}
