package Game;

public enum MethodeResolution {
    BACKTRACKING, ELIMINATION_DIRECTE, PLACEMENT_FORCE, PAIRES
}
